--- a/src/app/store/storeHeader.component.html
+++ b/src/app/store/storeHeader.component.html
@@ -42,7 +42,7 @@
                             Wishlist</a></li>
 
                     <li>
-                        <a href="# " class="mycart">
+                        <a routerLink="/cart" class="mycart">
                              <cart-summery></cart-summery>   
                         </a> 
                     </li>
